<resources>
    <string name="app_name">Flashy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="decks">Mazos</string>
    <string name="cards_fragment_label">Cartas</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder_deck_name">Diseño Instruccional</string>
    <string name="study">Estudiar</string>
    <string name="preview">Vista\nPrevia</string>
    <string name="placeholder_card_front">Diseño Instruccional</string>
    <string name="create_new_deck">Crear Nuevo Mazo</string>
    <string name="create_new_card">Crear Nueva Carta</string>
    <string name="create">Crear</string>
    <string name="new_card">Nueva Carta</string>
    <string name="edit_card">Editar Carta</string>
    <string name="edit_deck">Editar Mazo</string>
    <string name="front_content">Contenido Frontal</string>
    <string name="back_content">Contenido Posterior</string>
    <string name="card_content">Card Content</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="deck_name">Nombre del mazo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_card_confirmation_text">¿Desea eliminar esta carta?</string>
    <string name="delete_deck_confirmation_text">¿Desea eliminar este mazo?</string>
    <string name="all_cards_will_be_deleted">Se eliminarán todas las cartas contenidas en él.</string>
    <string name="confirmation">Confirmación</string>
    <string name="delete">Eliminar</string>
    <string name="rename">Renombrar</string>
    <string name="rename_deck">Renombrar Mazo</string>
    <string name="delete_deck">Eliminar Mazo</string>
    <string name="turn_over">Voltear</string>
    <string name="again">De Nuevo</string>
    <string name="good">Bien</string>
    <string name="card_view_button_description">Ver las cartas de este mazo</string>
    <string name="quit">Salir</string>
    <string name="image">Imagen</string>
    <string name="front_text">Texto Frontal</string>
    <string name="back_text">Texto Posterior</string>
    <string name="back_image">Imagen Posterior</string>
    <string name="front_image">Imagen Frontal</string>
    <string name="card_back_image_button_desc">Seleccionar imagen posterior</string>
    <string name="card_front_image_button_desc">Seleccionar imagen frontal</string>
    <string name="take_front_photo">Tomar imagen frontal</string>
    <string name="take_back_photo">Tomar imagen posterior</string>
    <string name="remove_front_image">Quitar imagen frontal</string>
    <string name="remove_back_image" />
    <string name="remove_front_audio">Quitar audio frontal</string>
    <string name="pick_audio">Elegir archivo de audio</string>
    <string name="record_audio">Grabar audio</string>
    <string name="play_front_audio">Reproducir audio frontal</string>
    <string name="remove_back_audio">Quitar audio posterior</string>
    <string name="play_back_audio">Reproducir audio posterior</string>
    <string name="srs">SRS</string>
    <string name="free">Libre</string>
    <string name="due_date">Fecha de estudio</string>
    <string name="interval">Intervalo</string>
</resources>