<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CardEditFragment">


    <ScrollView
        android:id="@+id/card_content_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/card_content"
        app:layout_constraintBottom_toTopOf="@+id/save_card_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/front_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:ems="10"
                android:hint="@string/front_content"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/back_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:ems="10"
                android:hint="@string/back_content"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_card_button"
        app:layout_constraintTop_toBottomOf="@+id/card_content_scrollview"
        app:layout_goneMarginStart="0dp" />

    <Button
        android:id="@+id/delete_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/save_card_button"
        app:layout_constraintEnd_toStartOf="@+id/save_card_button"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>